[package]
name = "rust-mtls"
version = "0.1.0"
authors = ["Stephane Jolicoeur <picto@stephanejolicoeur.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[[bin]]
name = "tls-server"
path = "src/main.rs"

[dependencies]
actix-rt = "0.2"
actix-web = { version="1.0.0", features=["ssl"] }
env_logger = "0.6"
openssl = { version="0.10" }